--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+!DOCTYPE html>
+ <html>
+ <head>
+ <meta charset='UTF-8'>
+ <title>cg do mal</title>
+</head>
+ <body>
+ <h1>Olá, sou kelwin!</h1>
+ <p>Primeira página</p>
+<h2>coisas que gosto</h2>
+<p>aanda com mimha cg arruamr ela  </p>
+<p>ir para as trilhas</p>
+<p>gosto fe cuidar dos tratores</p>
+</body>
+ </html>
 
